# a3dasm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  Makefile  PORTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yml  pull_request.yml  release.yml
docs/: AUDIT-20260623.md  FEATURES.md  authoring-a-study.md  backends.md  concepts.md  index.md  installation.md  license.md  reading-a-run.md
docs/api/: agents.md  evaluator.md  graph.md  run.md
docs/example_study/workspace/: evaluator.py
docs/notebooks/: quickstart.ipynb
docs/specs/: 04-single-notebook-deliverable.md  05-slurm-execution-kb.md
internal/: AUDIT-20260623-reruns.md  BACKLOG.md  FEATURES.md  OPEN_DESIGN_SPACE_FRAMEWORK.md
internal/specs/: 01-reconcile-cancelled-completed.md  02-typed-escalation-comms.md  03-problem-definer-agent.md  06-stuck-delegation-detection.md  07-duplicate-evaluation-detection.md  08-metadata-derived-gpu-sizing.md  09-querystore-compound-filter.md  README.md
src/a3dasm/: __init__.py  __main__.py
src/a3dasm/_src/: __init__.py  _embed_worker.py  _f3dasm_compat.py  agent_prompts.py  agent_runtime.py  container_runner.py  delegation_log.py  graph_builder.py  graph_state.py  hypothesis_ledger.py  instrumented.py  literature_corpus.py  lookup.py  milestones.py  notebook_exec.py  optimizer.py  phases.py  resource_backend.py  reviewer.py  run.py  science_monitor.py  settings.py  slurm_llm.py  telemetry.py  tool_catalog.py  verdict_validator.py  watchdog_cleanup.py
src/a3dasm/_src/agents/: __init__.py  _graphs.py  critic.py  datagenerator.py  debugger.py  implementer.py  literature.py  strategizer.py
src/a3dasm/_src/backends/: base.py  claude.py  ollama.py  openai_compatible.py  openrouter.py  registry.py  vllm.py
src/a3dasm/_src/knowledge/: README.md  __init__.py  charter.py  idioms.py  kb.py
src/a3dasm/_src/knowledge/entries/: 0001-evaluate-through-get-evaluator.md  0002-surrogates-and-analysis-are-off-ledger.md  0003-hypotheses-are-bounded-claims.md  0004-one-delegation-one-experiment.md  0005-replicate-reproduces-from-store.md  0006-evidence-anchors-to-the-report.md  0007-author-and-register-a-source.md  0008-experimentdata-input-and-to-numpy.md  (+2 more)
src/a3dasm/_src/nodes/: __init__.py  _constants.py  base.py  critic_gate.py  lifecycle.py  parsing.py  recording.py  strategizer.py  worker.py
studies/: audit_run.py  benchmark_embeddings.py  run_ledger.csv  run_ledger.py
studies/_oracle_src/: black_box_3d.py
studies/example_study/: PROBLEM_STATEMENT.md  config.yaml
tests/: __init__.py  fixtures.py  test_agent_prompts.py  test_agent_roles.py  test_agent_runtime_extra.py  test_agentic_run.py  test_arxiv_max_results_coercion.py  test_backend_parity.py  test_backend_registry.py  test_bash_session.py  test_batch5_features.py  test_cancel_delegation.py  test_canonical_store_e2e.py  test_canonical_store_phase3.py  test_charter.py  test_claude_adapter.py  test_claude_stream_timeout.py  test_confer.py  test_container_runner.py  test_container_runner_auth.py  test_container_runner_extra.py  test_critic_grep.py  test_critic_memory.py  test_debug_transcripts.py  test_delegate_wait_coercion.py  test_delegation_authority.py  test_delegation_id_allocation.py  test_delegation_log.py  test_delegation_log_extra.py  test_delegation_log_provenance.py  test_duplicate_eval_stats.py  test_embed_worker.py  test_entrypoint_clobber_guard.py  test_eval_budget_governor.py  test_eval_count_authority.py  test_eval_count_unification.py  test_eval_reconciliation.py  test_evaluator_registration.py  test_evaluator_resolution.py  test_f3dasm_idioms.py  (+85 more)
(+2 files in other folders)
